# tree-sitter-fasmg

./: .gitignore  Cargo.toml  GRAMMAR_SURFACE.md  README.md  grammar.js  package.json  tree-sitter.json
baseline/: failures.tsv  raw-summary.json  results.csv  summary.md
bindings/rust/: build.rs  html.rs  lib.rs
design-notes/: README.md  edge-cases-plan.md  refactor-plan.md
queries/: folds.scm  highlights.scm  locals.scm
scripts/: build-wasm.ps1  build-wasm.sh  corpus-baseline.sh  demo.ps1  demo.sh  export-playground.ps1  export-playground.sh  ts.ps1  ts.sh  vendor-cm6.py
spec/: keyword-groups.json  tokenization.json
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: blocks-and-calm.txt  include-corpus-forms.txt  literals-and-symbols.txt  match-and-conditionals.txt  phase-7-10-edge-cases.txt  phase-targets.txt  real-script-forms.txt
test/fixtures/: README.md
test/fixtures/fail/: catchall_bangq_space.l4gs.g  catchall_q_nospace.l4gs.g  ident_backslash.l4gs.g  ident_dollar_hex_trap.l4gs.g  ident_leading_digit.l4gs.g  ident_question_mid.l4gs.g  ident_question_mid_chain.l4gs.g  ident_space_around_dot_leading.l4gs.g  ident_space_around_dot_trailing.l4gs.g  number_0X_uppercase.l4gs.g  number_0x_mixed_h.l4gs.g  number_exp_plus_f_no_dot.l4gs.g  number_float_exp_plus_f.l4gs.g  number_leading_dot.l4gs.g  number_trailing_garbage.l4gs.g  (+5 more)
tests/: html_highlighting.rs
web/advanced/: README.md  baseline.js  index.html  main.js  samples.js  samples.json  styles.css
web/playground/: app.js  index.html  styles.css
web/shared/: fasmg-web.js
(+22 files in other folders)
