[package]
name = "tree-sitter-fasmg"
version = "0.0.1"
edition = "2021"
description = "Tree-sitter grammar crate for fasmg (flat assembler g)."
license = "MIT"
build = "bindings/rust/build.rs"

[lib]
name = "tree_sitter_fasmg"
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.25.10"

[build-dependencies]
cc = "1.1"
